--- a/roseday.html
+++ b/roseday.html
@@ -7,6 +7,9 @@
 </head>
 
 <body>
+     <div class="text" style="position: absolute;top: 40%; left: 10%; font-size: 25px; font-weight: 700;">
+        CLICK ON CARD
+    </div>
     <div class="birthday-card">
         <div class="cover-inner">
             <img src="assets/photo3.jpg"
